--- a/trunk/WeBoCa/src/drayson/weboca/gui/SummaryPanel.form
+++ b/trunk/WeBoCa/src/drayson/weboca/gui/SummaryPanel.form
@@ -48,11 +48,12 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="viewCorpusButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="viewCorpusButton1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="saveURLsButton" alignment="0" min="-2" max="-2" attributes="1"/>
+                                  <Component id="viewCorpusButton" alignment="0" min="-2" max="-2" attributes="1"/>
                               </Group>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="161" max="32767" attributes="0"/>
@@ -94,7 +95,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="viewCorpusButton" min="-2" pref="18" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="viewCorpusButton1" min="-2" pref="18" max="-2" attributes="0"/>
+              <Component id="saveURLsButton" min="-2" pref="18" max="-2" attributes="0"/>
               <EmptySpace pref="47" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -168,10 +169,13 @@
         <Property name="text" type="java.lang.String" value="Additional Options"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="viewCorpusButton1">
+    <Component class="javax.swing.JButton" name="saveURLsButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Save URLs to text file"/>
+        <Property name="text" type="java.lang.String" value="Save URLs used to text file"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveURLsButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
