--- a/WeBoCa/src/drayson/weboca/gui/WelcomePanel.form
+++ b/WeBoCa/src/drayson/weboca/gui/WelcomePanel.form
@@ -56,7 +56,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Welcome to WeBoCa v0.1.."/>
+        <Property name="text" type="java.lang.String" value="Welcome to WeBoCa v1.2..."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
